--- a/notebooks/mmpl-disco.ipynb
+++ b/notebooks/mmpl-disco.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5ada0bc00db0650e436bb42bd00a1e44d68112b157dc7c975cc1c012575dc3be"
+  "signature": "sha256:a09507916f4c79d606e9bb2004867e9012d10618fe75aa9fba4a1b13d3acd4e0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -25,7 +25,7 @@
       "The following sections were removed from the notebook for the \"Big Data\" chapter due to the following:\n",
       " 1. Running low on time\n",
       " 1. Disco set up on Amazon EC2 in coordinated cluster mode being rather more involved than running Disco on a local machine.\n",
-      " 1. Hadoop on EMR is covered in the main notebook, and the usefulness of a tiny section on a local machine running Hadoop seem rather limited.\n",
+      " 1. Hadoop on EMR is covered in the main notebook, and the usefulness of a tiny section on a local machine running Hadoop seem rather limited (in fact, only the first few lines were created in this section).\n",
       " \n",
       "However, it is felt that the content may be useful for some, so it is preserved in this orphaned notebook."
      ]
@@ -423,14 +423,6 @@
       "$ hdfs dfs -put data/{0,1,2}.csv /weather\n",
       "```"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
